<resources>
    <string name="app_name">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name" />
    <string name="email" />
    <string name="phone" />
    <string name="login">Login</string>
    <string name="qhuy">Qhuy</string>
    <string name="hqhuy_20it12_vku_udn_vn">hqhuy.20it12@vku.udn.vn</string>
    <string name="_012345678">012345678</string>
</resources>